# cmake-gtest-cpp-boilerplate

./: .gitignore  CMakeLists.txt  README.md  cmake-boilerplate.code-workspace  main.cpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cc
src/moduleA/: CMakeLists.txt  moduleA.cpp  moduleA_api.h
src/moduleA/utest/: CMakeLists.txt  utest_moduleA.cc
